Mengganti isi dengan teks lorem ipsum

--- a/soal/soal-kedua.tex
+++ b/soal/soal-kedua.tex
@@ -1,6 +1,5 @@
 	\question
-Dalam Ilmu-Ilmu Sosial khususnya Sosiologi, telah berkembang 2 pendekatan/metode penelitian, kuantitatif dan kualitatif. Carilah sumber rujukan ilmiah tentang kedua metode tersebut.
-Berikan penjelasan tentang perbedaan landasan filosofis, tujuan dan prinsip-prinsip dalam penelitian sosial antara kedua pendekatan/metode tersebut; disertai dengan contoh yang relevan?
+\lipsum[2]
 \begin{solution}
 	Dalam penelitian ilmu sosial terdapat dua metode atau pendekatan yaitu penelitian kuantitatif dan kualitatif.
 	Dua metode dalam penelitian ilmu sosial ini memiliki landasan filosofis, tujuan, dan prinsip-prinsip yang berbeda satu sama lain.
