--- a/soal/soal-pertama.tex
+++ b/soal/soal-pertama.tex
@@ -1,6 +1,5 @@
 \question
-Carilah sumber rujukan tentang dua aliran dalam Filsafat Ilmu Sosial; (i) Positivisme-Realisme dan (ii) Konstruktivisme-Interpretivisme; yang melandasi arah dan perkembangan ilmu-ilmu sosial modern.
-Berikan penjelasan tentang asumsi/pandangan tentang realitas sosial, fokus kajian dan implikasi dalam penelitian ilmiah dari kedua aliran tersebut?
+\lipsum[1]
 \begin{solution}
 	Aliran postivisme dan konstruktivisme adalah dua aliran dalam filsafat ilmu sosial yang sangat berbeda. Dalam hal pandangan tentang realitas sosial, positivisme memandang bahwa realitas sosial berjalan sesuai dengan hukum yang berlaku dan hanya melihat fakta-fakta empiris semata \cite{armstrong_positivism_2013}.
 	Dengan kata lain, positivisme melihat realitas sosial tanpa melihat konteks sosial, motivasi, dan nilai yang ada di masyarakat yang mendasarinya.
