--- a/soal/soal-ketiga.tex
+++ b/soal/soal-ketiga.tex
@@ -1,6 +1,5 @@
 	\question
-Penelitian dalam rangka pengembangan ilmu pengetahuan ilmiah khususnya dalam Ilmu-Ilmu Sosial selalu membawa dampak negatif (baik diperkirakan dan diantisipasi maupun tidak diinginkan) terhadap pihak-pihak yang terlibat secara langsung maupun tidak langsung. 
-Berikan contoh ilustrasi dampak negatif dari sebuah penelitian sosial; disertai dengan upaya untuk meminimalisasi/mengantisipasinya.
+\lipsum[4]
 \begin{solution}
 	Salah satu ilustrasi dampak negatif dari sebuah penelitian sosial terhadap pihak-pihak yang terlibat dapat dilihat dari \textit{The Milgram experiment(s)}, sebuah penelitian psikologis sosial yang dilakukan oleh Stanley Milgram dari Universitas Yale pada 1961.
 	Penelitian ini bertujuan untuk mencari tahu sampai sejauh mana orang-orang akan mematuhi figur yang memiliki otoritas ketika disuruh untuk melakukan hal yang berlawanan dengan hati nurani dan berbahaya \cite{milgram_behavioral_1963}.
