Ubah file contoh

--- a/soal/soal-kedua.tex
+++ b/soal/soal-kedua.tex
@@ -1,5 +1,9 @@
 	\question
-\lipsum[2]
+Pellentesque eget augue nec purus elementum ullamcorper. Etiam malesuada ipsum sed nibh tincidunt, 
+quis sollicitudin nisl rhoncus. In egestas rutrum suscipit. Vivamus finibus, odio vitae volutpat 
+egestas, felis nisi imperdiet leo, sed commodo nibh sem vel sapien. Morbi ut pulvinar diam. Ut ut 
+augue lacus. Proin rhoncus risus ut blandit fringilla. Curabitur et lacus ac nisi egestas interdum ac 
+non mauris. Aenean quis felis dictum, gravida eros quis, sagittis est.
 \begin{solution}
 	Dalam penelitian ilmu sosial terdapat dua metode atau pendekatan yaitu penelitian kuantitatif dan kualitatif.
 	Dua metode dalam penelitian ilmu sosial ini memiliki landasan filosofis, tujuan, dan prinsip-prinsip yang berbeda satu sama lain.
