--- a/soal/soal-keempat.tex
+++ b/soal/soal-keempat.tex
@@ -1,1 +1,8 @@
-\lipsum[3-7]
+	\question
+	Sed eu vestibulum velit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere 
+	cubilia curae; Proin quis tortor et diam tempus fermentum ac in neque. Maecenas gravida a neque 
+	sit amet dictum. Quisque ultricies, turpis accumsan congue interdum, elit lorem rutrum est, quis 
+	rutrum purus ex maximus dolor?
+\begin{solution}
+	\lipsum[2]
+\end{solution}
