--- a/soal/soal-kelima.tex
+++ b/soal/soal-kelima.tex
@@ -1,1 +1,7 @@
-\lipsum[2-4]
+	\question
+	 Donec vel sapien erat. Donec iaculis libero id metus ultricies consequat eget vel augue. Proin a 
+	 tempus sem. Donec vulputate risus sit amet varius mattis. Vestibulum quis nibh vitae ligula 
+	 pharetra euismod id at velit?
+\begin{solution}
+	\lipsum[1-2]
+\end{solution}
