--- a/soal/soal-pertama.tex
+++ b/soal/soal-pertama.tex
@@ -1,5 +1,8 @@
 \question
-\lipsum[1]
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget justo a tellus porttitor 
+sodales. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. 
+Nunc a nulla sed odio pretium fermentum. Sed pellentesque tincidunt purus nec tincidunt. Maecenas 
+aliquet ullamcorper libero, eget euismod augue.
 \begin{solution}
 	Aliran postivisme dan konstruktivisme adalah dua aliran dalam filsafat ilmu sosial yang sangat berbeda. Dalam hal pandangan tentang realitas sosial, positivisme memandang bahwa realitas sosial berjalan sesuai dengan hukum yang berlaku dan hanya melihat fakta-fakta empiris semata \cite{armstrong_positivism_2013}.
 	Dengan kata lain, positivisme melihat realitas sosial tanpa melihat konteks sosial, motivasi, dan nilai yang ada di masyarakat yang mendasarinya.
