--- a/soal/soal-ketiga.tex
+++ b/soal/soal-ketiga.tex
@@ -1,5 +1,8 @@
 	\question
-\lipsum[4]
+Sed eu vestibulum velit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere 
+cubilia curae; Proin quis tortor et diam tempus fermentum ac in neque. Maecenas gravida a neque sit 
+amet dictum. Quisque ultricies, turpis accumsan congue interdum, elit lorem rutrum est, quis rutrum 
+purus ex maximus dolor?
 \begin{solution}
 	Salah satu ilustrasi dampak negatif dari sebuah penelitian sosial terhadap pihak-pihak yang terlibat dapat dilihat dari \textit{The Milgram experiment(s)}, sebuah penelitian psikologis sosial yang dilakukan oleh Stanley Milgram dari Universitas Yale pada 1961.
 	Penelitian ini bertujuan untuk mencari tahu sampai sejauh mana orang-orang akan mematuhi figur yang memiliki otoritas ketika disuruh untuk melakukan hal yang berlawanan dengan hati nurani dan berbahaya \cite{milgram_behavioral_1963}.
