--- a/answer-sheet.tex
+++ b/answer-sheet.tex
@@ -1,4 +1,4 @@
-\documentclass[answer, 12pt]{exam}
+\documentclass[answers, 12pt]{exam}
 
 % Mengubah Solution menjadi Jawaban
 \renewcommand{\solutiontitle}{\noindent\textbf{Jawaban:}\par\noindent}
