Ganti data pribadi dan ubah menjadi lorem ipsum

--- a/answer-sheet.tex
+++ b/answer-sheet.tex
@@ -18,7 +18,7 @@
 
 
 %%%%%%%%%%%%%%% MEMBUAT HEADER %%%%%%%%%%%%%%%%%%
-\header{\bfseries Filsafat Ilmu\\Amika Wardana S.Sos., M.A. Ph.D}{}{\bfseries Ujian Akhir Semester\\ 
+\header{\bfseries Filsafat Ilmu\\Lorem Ipsum}{}{\bfseries Ujian Akhir Semester\\ 
 \today} % membuat header
 \headrule % membuat garis di header
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -32,8 +32,8 @@ Pendidikan Sosiologi (B)} % membuat footer
 
 %%%%%%%%%%%%%%%%%% SILAKAN MASUKKAN IDENTITAS SEPERTI NAMA, NIM, DAN PROGRAM STUDI %%%%%%%%%%%%%%%%%%
 \newcommand{\nama}{Nawan Tabah Pangestu}       %%%%%%%%%%%  MASUKKAN NAMA
-\newcommand{\NIM}{21413244035}                 %%%%%%%%%%%  MASUKKAN NOMOR INDUK MAHASISWA
-\newcommand{\prodi}{Pendidikan Sosiologi / B}  %%%%%%%%%%%  MASUKKAN NAMA PRODI DAN KELAS
+\newcommand{\NIM}{12345678901233}                 %%%%%%%%%%%  MASUKKAN NOMOR INDUK MAHASISWA
+\newcommand{\prodi}{Lorem Ipsum / B}  %%%%%%%%%%%  MASUKKAN NAMA PRODI DAN KELAS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
