--- a/answer-sheet.tex
+++ b/answer-sheet.tex
@@ -31,7 +31,7 @@ Pendidikan Sosiologi (B)} % membuat footer
 
 
 %%%%%%%%%%%%%%%%%% SILAKAN MASUKKAN IDENTITAS SEPERTI NAMA, NIM, DAN PROGRAM STUDI %%%%%%%%%%%%%%%%%%
-\newcommand{\nama}{Nawan Tabah Pangestu}       %%%%%%%%%%%  MASUKKAN NAMA
+\newcommand{\nama}{Lorem Ipsum Dolor Sit Amet}       %%%%%%%%%%%  MASUKKAN NAMA
 \newcommand{\NIM}{12345678901233}                 %%%%%%%%%%%  MASUKKAN NOMOR INDUK MAHASISWA
 \newcommand{\prodi}{Lorem Ipsum / B}  %%%%%%%%%%%  MASUKKAN NAMA PRODI DAN KELAS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
