Ganti nama menjadi lorem ipsum

--- a/answer-sheet.tex
+++ b/answer-sheet.tex
@@ -24,7 +24,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%% MEMBUAT FOOTER %%%%%%%%%%%%%%%%%%
-\footer{\bfseries Nawan Tabah Pangestu}{\bfseries Halaman \thepage\ dari \numpages}{\bfseries 
+\footer{\bfseries Lorem Ipsum Dolor}{\bfseries Halaman \thepage\ dari \numpages}{\bfseries 
 Pendidikan Sosiologi (B)} % membuat footer
 \footrule % membuat garis di footer
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
