Ganti nama dosen

--- a/answer-sheet.tex
+++ b/answer-sheet.tex
@@ -18,7 +18,7 @@
 
 
 %%%%%%%%%%%%%%% MEMBUAT HEADER %%%%%%%%%%%%%%%%%%
-\header{\bfseries Filsafat Ilmu\\Amika Wardana S.Sos., M.A. Ph.D}{}{\bfseries Ujian Akhir Semester\\ 
+\header{\bfseries Filsafat Ilmu\\Nama dosen}{}{\bfseries Ujian Akhir Semester\\ 
 \today} % membuat header
 \headrule % membuat garis di header
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
