--- a/data-diri.tex
+++ b/data-diri.tex
@@ -1,5 +1,5 @@
 %%%%% DATA DIRI %%%%%
 \newcommand{\nama}{Nawan Tabah Pangestu}       %%%%%%%%%%%  MASUKKAN NAMA
-\newcommand{\NIM}{21413244035}                 %%%%%%%%%%%  MASUKKAN NOMOR INDUK MAHASISWA
+\newcommand{\NIM}{Isikan NIM di sini}                 %%%%%%%%%%%  MASUKKAN NOMOR INDUK MAHASISWA
 \newcommand{\prodi}{Pendidikan Sosiologi / B}  %%%%%%%%%%%  MASUKKAN NAMA PRODI DAN KELAS
 %%%%% DATA DIRI %%%%%
